add tree and readline packages

--- a/hiera/users/wilddog64.yaml
+++ b/hiera/users/wilddog64.yaml
@@ -11,3 +11,9 @@ people::wilddog64::packages::my_packages:
   package:
     name: lesspipe
     ensure: present
+  package:
+    name: tree
+    ensure: present
+  package:
+    name: readline
+    ensure: present
