add autojump package

--- a/hiera/users/wilddog64.yaml
+++ b/hiera/users/wilddog64.yaml
@@ -17,3 +17,6 @@ people::wilddog64::packages::my_packages:
   package:
     name: readline
     ensure: present
+  package:
+    name: autojump
+    ensure: present
