add vagrant package

--- a/hiera/users/wilddog64.yaml
+++ b/hiera/users/wilddog64.yaml
@@ -20,3 +20,6 @@ people::wilddog64::packages::my_packages:
   package:
     name: autojump
     ensure: present
+  package:
+    name: vagrant
+    provider: 'brewcask'
