--- a/hiera/users/wilddog64.yaml
+++ b/hiera/users/wilddog64.yaml
@@ -26,6 +26,9 @@ people::wilddog64::packages::my_packages:
   package:
     name: textmate
     provider: brewcask
+  package:
+    name: cord
+    provider: brewcask
 
 people::wilddog64::vagrant_plugin::plugins:
     'vagrant-berkshelf':
