--- a/hiera/users/wilddog64.yaml
+++ b/hiera/users/wilddog64.yaml
@@ -29,6 +29,9 @@ people::wilddog64::packages::my_packages:
   package:
     name: cord
     provider: brewcask
+  package:
+    name: sourcetree
+    provider: brewcask
 
 people::wilddog64::vagrant_plugin::plugins:
     'vagrant-berkshelf':
