--- a/hiera/users/wilddog64.yaml
+++ b/hiera/users/wilddog64.yaml
@@ -35,6 +35,9 @@ people::wilddog64::packages::my_packages:
   package:
     name: adium
     provider: brewcask
+  package:
+    name: virtualbox
+    provider: brewcask
 
 people::wilddog64::vagrant_plugin::plugins:
     'vagrant-berkshelf':
