--- a/hiera/users/wilddog64.yaml
+++ b/hiera/users/wilddog64.yaml
@@ -38,6 +38,9 @@ people::wilddog64::packages::my_packages:
   package:
     name: virtualbox
     provider: brewcask
+  package:
+    name: firefox
+    provider: brewcask
 
 people::wilddog64::vagrant_plugin::plugins:
     'vagrant-berkshelf':
