--- a/hiera/users/wilddog64.yaml
+++ b/hiera/users/wilddog64.yaml
@@ -45,6 +45,8 @@ people::wilddog64::packages::my_packages:
     name: docker
   package:
     name: boot2docker
+  package:
+    name: freetds
 
 people::wilddog64::vagrant_plugin::plugins:
     'vagrant-berkshelf':
